--- a/app/globals.css
+++ b/app/globals.css
@@ -123,7 +123,7 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50 font-open-sans;
+    @apply border-border outline-ring/50 font-open-sans text-black/90;
   }
   body {
     @apply bg-background text-foreground;
@@ -135,7 +135,7 @@
   h4,
   h5,
   h6 {
-    @apply font-cormorant;
+    @apply font-cormorant text-black;
   }
 }
 
