--- a/app/globals.css
+++ b/app/globals.css
@@ -44,12 +44,20 @@
   --radius-xl: calc(var(--radius) + 4px);
 
   --animate-slide: slide 150s linear infinite;
+  --animate-shimmer: shimmer 1.5s infinite;
+
   @keyframes slide {
     0% {
       transform: translateX(0);
     }
     100% {
       transform: translateX(-50%);
+    }
+  }
+
+  @keyframes shimmer {
+    100% {
+      transform: translateX(200%);
     }
   }
 }
@@ -91,10 +99,6 @@
 }
 
 @layer utilities {
-  /* .pause {
-    animation-play-state: paused;
-  } */
-
   .underline-animated {
     @apply relative w-fit overflow-hidden;
   }
@@ -108,16 +112,23 @@
     @apply translate-x-0 delay-300;
   }
 
-  /* .underline-animated:hover::before {
-    @apply translate-x-full delay-0;
-  } */
-
   .underline-animated::after {
     @apply -translate-x-full delay-0;
   }
 
-  /* .underline-animated:hover::after {
-    @apply translate-x-0 delay-300;
+  /* .shimmer-effect {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0.5) 50%,
+      rgba(255, 255, 255, 0) 100%
+    );
+    animation: shimmer 1.5s infinite;
   } */
 }
 
