shop page, sidebar, grid refactorings

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,6 +45,8 @@
 
   --animate-slide: slide 150s linear infinite;
   --animate-shimmer: shimmer 1.5s infinite;
+  --animate-accordion-down: accordion-down 300ms ease-out;
+  --animate-accordion-up: accordion-up 300ms ease-out;
 
   @keyframes slide {
     0% {
@@ -58,6 +60,24 @@
   @keyframes shimmer {
     100% {
       transform: translateX(200%);
+    }
+  }
+
+  @keyframes accordion-down {
+    from {
+      height: 0;
+    }
+    to {
+      height: var(--radix-accordion-content-height);
+    }
+  }
+
+  @keyframes accordion-up {
+    from {
+      height: var(--radix-accordion-content-height);
+    }
+    to {
+      height: 0;
     }
   }
 }
@@ -120,20 +140,9 @@
     @apply list-disc pl-6;
   }
 
-  /* .shimmer-effect {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(
-      90deg,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0.5) 50%,
-      rgba(255, 255, 255, 0) 100%
-    );
-    animation: shimmer 1.5s infinite;
-  } */
+  .shimmer {
+    @apply relative overflow-hidden before:absolute before:inset-0 before:-translate-x-full before:animate-shimmer before:bg-gradient-to-r before:from-transparent before:via-white/10 before:to-transparent;
+  }
 }
 
 @layer base {
